<resources>
    <string name="app_name">Anotações de Barris</string>

    <string name="textview">TextView</string>

    <!-- Botões -->
    <string name="btn_editar">Editar</string>
    <string name="btn_deletar">Deletar</string>
    <string name="btn_salvar">Salvar</string>
    <string name="btn_voltar">Voltar</string>
    <string name="btn_adicionar">Adicionar</string>

    <!-- Items do menu -->
    <string name="gerar_pdf">Gerar PDF</string>
    <string name="deletar_tudo">Deletar tudo</string>

    <!-- Atributos da nota -->
    <string name="codigo">Código</string>
    <string name="hora">Hora</string>
    <string name="numero">Número</string>
    <string name="numero_barril">Número do Barril</string>

</resources>