<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_numero_barril"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/numero_barril" />

        <TextView
            android:id="@+id/txt_quantidade_barris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/background_items"
            android:padding="5dp"
            android:textSize="15sp"
            android:text="@string/textview"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <EditText
        android:id="@+id/edit_numero_barril"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_edit"
        android:padding="16dp"
        android:ems="10"
        android:hint="@string/numero"
        android:inputType="number"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_adicionar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:backgroundTint="@color/btn_adicionar_salvar"
        android:text="@string/btn_adicionar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"/>

</LinearLayout>