<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:background="@drawable/background_items"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView android:id="@+id/text_codigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/textview" />

        <TextView android:id="@+id/text_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/textview" />

        <Button android:id="@+id/btn_editar"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:textSize="11sp"
            android:padding="0dp"
            android:backgroundTint="@color/btn_editar"
            android:textAllCaps="false"
            android:text="@string/btn_editar"/>

        <View
            android:layout_width="10dp"
            android:layout_height="1dp" />

        <Button android:id="@+id/btn_deletar"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:textSize="11sp"
            android:padding="0dp"
            android:backgroundTint="@color/btn_deletar"
            android:textAllCaps="false"
            android:text="@string/btn_deletar"/>

    </LinearLayout>
</LinearLayout>